// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. s2s-jest-unit-test-case 1`] = `
"
// empty

      ↓ ↓ ↓ ↓ ↓ ↓

// empty

test(\\"sum\\", () => {
  const result = sum();
  expect(result).toBe(null);
});
"
`;

exports[`1. s2s-jest-unit-test-case 2`] = `
"
// empty

      ↓ ↓ ↓ ↓ ↓ ↓

// empty

test(\\"sum\\", () => {
  const result = sum();
  expect(result).toBe(null);
});

test(\\"add\\", () => {
  const result = add();
  expect(result).toBe(null);
});
"
`;

exports[`when exist test("sum") 1`] = `
"
test('sum', () => {
  expect(sum(1, 1)).toBe(2)
})

      ↓ ↓ ↓ ↓ ↓ ↓

test('sum', () => {
  expect(sum(1, 1)).toBe(2);
});
"
`;

exports[`when exist test("sum") 2`] = `
"
test('sum', () => {
  expect(sum(1, 1)).toBe(2)
})

      ↓ ↓ ↓ ↓ ↓ ↓

test('sum', () => {
  expect(sum(1, 1)).toBe(2);
});

test('add', () => {
  const result = add();
  expect(result).toBe(null);
});
"
`;
